[gd_scene load_steps=2 format=3 uid="uid://main_menu_scene"]

[ext_resource type="Script" path="res://presentation/ui/main_menu.gd" id="1"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color(0.192, 0.18, 0.168, 1)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBox" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 6
alignment = 1

[node name="Title" type="Label" parent="CenterContainer/VBox"]
layout_mode = 2
text = "WACHESAW"
horizontal_alignment = 1

[node name="Tagline" type="Label" parent="CenterContainer/VBox"]
layout_mode = 2
text = "HAPPY HUNTING... OR PLACE OF GREAT WEEPING?"
horizontal_alignment = 1

[node name="Spacer1" type="Control" parent="CenterContainer/VBox"]
layout_mode = 2
custom_minimum_size = Vector2(0, 24)

[node name="PlayAIButton" type="Button" parent="CenterContainer/VBox"]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(260, 48)
text = "Play vs AI"

[node name="PlayLocalButton" type="Button" parent="CenterContainer/VBox"]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(260, 48)
text = "Local 2-Player"

[node name="Spacer2" type="Control" parent="CenterContainer/VBox"]
layout_mode = 2
custom_minimum_size = Vector2(0, 16)

[node name="DiffLabel" type="Label" parent="CenterContainer/VBox"]
layout_mode = 2
text = "AI DIFFICULTY"
horizontal_alignment = 1

[node name="DifficultyButtons" type="HBoxContainer" parent="CenterContainer/VBox"]
unique_name_in_owner = true
layout_mode = 2
alignment = 1

[node name="DifficultyLabel" type="Label" parent="CenterContainer/VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Medium"
horizontal_alignment = 1

[node name="Spacer3" type="Control" parent="CenterContainer/VBox"]
layout_mode = 2
custom_minimum_size = Vector2(0, 24)

[node name="RulesInfo" type="Label" parent="CenterContainer/VBox"]
layout_mode = 2
custom_minimum_size = Vector2(340, 0)
text = "Capture the opponent's Chief (K) or reach their
back row. Swap adjacent friendly pieces. Trader can't
cross-win."
horizontal_alignment = 1
autowrap_mode = 2
